Remove usage of deprecated primitive constructors
Fix #14