@@ -41,7 +41,7 @@ public final class AstNegative extends SimpleNode {
         }
         if (obj instanceof String) {
             if (isStringFloat((String) obj)) {
-                return new Double(-Double.parseDouble((String) obj));
+                return Double.valueOf(-Double.parseDouble((String) obj));
             }
             return Long.valueOf(-Long.parseLong((String) obj));
         }
@@ -50,13 +50,13 @@ public final class AstNegative extends SimpleNode {
             return Long.valueOf(-((Long) obj).longValue());
         }
         if (obj instanceof Double || Double.TYPE == type) {
-            return new Double(-((Double) obj).doubleValue());
+            return Double.valueOf(-((Double) obj).doubleValue());
         }
         if (obj instanceof Integer || Integer.TYPE == type) {
             return Integer.valueOf(-((Integer) obj).intValue());
         }
         if (obj instanceof Float || Float.TYPE == type) {
-            return new Float(-((Float) obj).floatValue());
+            return Float.valueOf(-((Float) obj).floatValue());
         }
         if (obj instanceof Short || Short.TYPE == type) {
             return Short.valueOf((short) -((Short) obj).shortValue());
